# rust-webassenbly-hello-world

./: Cargo.toml  README.md  readme.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
docs/: hello_wasm.d.ts  hello_wasm.js  hello_wasm_bg.wasm  hello_wasm_bg.wasm.d.ts  index.html  package.json  rust_webassenbly_hello_world.d.ts  rust_webassenbly_hello_world.js  rust_webassenbly_hello_world_bg.wasm  rust_webassenbly_hello_world_bg.wasm.d.ts
src/: fizzbuzz_game.rs  lib.rs
src/fizzbuzz/: fizzbuzz.rs
src/gcd/: gcd.rs
