[package]
name = "rust-webassenbly-hello-world"
version = "0.1.0"
edition = "2021"
default-run = "fizzbuzz_game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "fizzbuzz_game"
path = "src/fizzbuzz_game.rs"

[dependencies]
wasm-bindgen = "0.2"
num = "0.4.0"
num-bigint = "0.4"